Do not allow to change the username

When the username is changed, the user is actually
removed and added again, this can couse many issues
so it is better if for the time being we do not allow
canging the username.

BUG: 328660